# SciVisualizer

./: .gitignore  CMakeLists.txt  README.md  create_dirs.sh  mosfet_solution.vtu  readme.txt
apps/desktop/: CMakeLists.txt
cmake/: environment.cmake
scripts/: format.sh
source_gen/: test.py
src/: .clang-format
src/client/: CMakeLists.txt
src/client/app/: CMakeLists.txt  main.cpp
src/client/resource/: resources.qrc
src/client/viewer/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
tests/unit/plugins/: CMakeLists.txt  main.cpp  resources.qrc
tests/unit/python/: CMakeLists.txt  main.cpp  python_console.h
